--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PCDKW89');</script>
+    })(window,document,'script','dataLayer','GTM-TJ7M5DX');</script>
     <!-- End Google Tag Manager -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Unegma Work</title>
+    <title>ZK Contacts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
