--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,14 @@
       content="Web site created using create-react-app"
     />
 
+    <!-- Social Sharing-->
+    <meta property="og:title" content="ZK Contact" />
+    <meta property="og:description" content="The definitive list for projects in the Zero Knowledge Space" />
+    <meta property="og:url" content="https://zk.contact" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
