--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
 
     <!-- Social Sharing-->
     <meta property="og:title" content="ZK Contact" />
@@ -52,6 +48,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ZK Contacts</title>
+    <meta
+        name="description"
+        content="The definitive list for projects in the Zero Knowledge Space"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
